--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,16 @@
+$red: #B50000;
+$unused-guess-color: #ccc;
+$button-text-color: #000;
+$button-border-color: #000;
+$button-text-color-disabled: #ccc;
+$button-border-color-disabled: #ccc;
+
+
+
 .letters-row{
     display: flex;
     width: 100%;
     justify-content: center;
-    &.header {
-        transform: scale(0.6);
-    }
 }
 
 .levels-row{
@@ -45,10 +51,47 @@ square:last-of-type{
 
 .wrong-guess {
   margin-left: 5px;
-  color: #ccc;
+  color: $unused-guess-color;
+  transition: all 0.2s ease-in;
   &.red{
-    color: red;
+    color: $red;
   }
+}
+
+.check-row{
+  justify-content: center;
+  display: flex;
+
+  .checks{
+    margin-top: 8px;
+    margin-right: 15px;
+  }
+}
+
+.keyboard-container{
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  left: 50%;
+  margin-left: -175px; //half the width of the container
+  justify-content: center;
+}
+
+.check-button{
+  height: 40px;
+  width: 120px;
+  background-color: transparent;
+  border: 1px solid $button-border-color;
+  color: $button-text-color;
+  opacity: 1;
+  transition: opacity 0.1s ease-in;
+
+  &.disabled{
+    opacity: 0.3;
+    transition: opacity 0.1s ease-in;
+    pointer-events: none;
+}
+
 }
 
 /* ----------------------------------------------
