--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -3,11 +3,11 @@ $letter-default-color: #000;
 $letter-correct-color: #173ba3;
 $square-highlighted-color:#fada4a;
 
+
+
 .square{
-    max-width: 62px;
     width: 62px;
     height: 62px;
-    max-height: 62px;
     border: 1px solid $square-border-color;
     border-right: none;
     position: relative;
@@ -15,11 +15,172 @@ $square-highlighted-color:#fada4a;
     align-items: center;
     justify-content: center;
 
+    &.header{
+        width: 29px !important;
+        height: 29px !important;
+        .letter {
+            font-size: 1.17rem !important;
+            margin-top: 5px !important;
+        }
+        .clue-number{
+            font-size: 0.48rem !important;
+        }
+    }
+
+
+    .letter{
+        font-weight: 500;
+        font-size: 2.5rem;
+        margin-top: 8px;
+        color: $letter-default-color;
+        &.correct{
+            color: $letter-correct-color
+        }
+    }
+
+
+    .clue-number{
+        font-size: 0.85rem;
+        position: absolute;
+        top: -1px;
+        left: 3px;
+    }
+
     &.highlighted{
         background-color: $square-highlighted-color;
     }
-
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .square{
+        width: 49px;
+        height: 49px;
+    
+    
+        .letter{
+            font-weight: 500;
+            font-size: 1.98rem;
+        }
+        .clue-number{
+            font-size: 0.67rem;
+        }
+    
+    }
+}
+
+@media (max-width: 767.98px) {
+    .square{
+    
+        &.letters-6{
+            width: 58px;
+            height: 58px;
+            .letter {
+                font-size: 2.34rem;
+            }
+            .clue-number{
+                font-size: 0.8rem;
+            }
+        }
+        &.letters-7{
+            width: 50px;
+            height: 50px;
+            .letter {
+                font-size: 2.02rem;
+            }
+            .clue-number{
+                font-size: 0.69rem;
+            }
+        }
+        &.letters-8{
+            width: 43px;
+            height: 43px;
+            .letter {
+                font-size: 1.74rem;
+            }
+            .clue-number{
+                font-size: 0.59rem;
+            }
+        }
+        &.letters-9{
+            width: 39px;
+            height: 39px;
+            .letter {
+                font-size: 1.57rem;
+            }
+            .clue-number{
+                font-size: 0.53rem;
+            }
+        }
+        &.letters-10{
+            width: 35px;
+            height: 35px;
+            .letter {
+                font-size: 1.41rem;
+                margin-top: 7px;
+            }
+            .clue-number{
+                font-size: 0.48rem;
+            }
+        }
+        &.letters-11{
+            width: 31px;
+            height: 31px;
+            .letter {
+                font-size: 1.25rem;
+                margin-top: 6px;
+            }
+            .clue-number{
+                font-size: 0.43rem;
+            }
+        }
+        &.letters-12{
+            width: 29px;
+            height: 29px;
+            .letter {
+                font-size: 1.17rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.48rem;
+            }
+        }
+        &.letters-13{
+            width: 27px;
+            height: 27px;
+            .letter {
+                font-size: 1.09rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.37rem;
+            }
+        }
+        &.letters-14{
+            width: 25px;
+            height: 25px;
+            .letter {
+                font-size: 1.01rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.34rem;
+            }
+        }
+        &.letters-15{
+            width: 23px;
+            height: 23px;
+            .letter {
+                font-size: 0.93rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.32rem;
+            }
+        }
+    }
+}
+
+
 
 .overlay{
     height: 100%;
