--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -8,7 +8,7 @@
     <div class="keyboard-row">
         <keyboard-button *ngFor="let letter of lettersRow3" (click)="onKeypress(letter)" [label]="letter"></keyboard-button>
         <div (click)="onKeypress('BKSP')" class="button-wrapper noselect">
-            <i style="font-weight: 900;" class="fa-regular fa-lg fa-delete-left"></i>
+            <i class="fa-solid fa-lg fa-delete-left"></i>
         </div>
     </div>
 </div>
