--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,7 +7,17 @@
 .header-wrapper{
     height: 50px;
     border-bottom: 1px solid #ccc;
-    margin-top: 5px;
+}
+
+.icon{
+    margin-top: 23px;
+    margin-left: 18px;
+    margin-right: 18px;
+    cursor: pointer;
+}
+
+square{
+    margin-top: 9px;
 }
 square:last-of-type{
     border-right: 1px solid black
