--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,6 @@
         <square [header]="true" letter="O"></square>
         <square [header]="true" letter="R"></square>
         <square [header]="true" letter="D"></square>
-        <i (click)="onSettingsClick()" class="icon fa-solid fa-lg fa-gear"></i>
+        <i (click)="onSettingsClick()" class="icon fa-solid fa-lg fa-rotate-right"></i>
     </div>
 </div>
