--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,7 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
 }
+
+body{
+  touch-action: manipulation;
+}
