--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,4 +1,6 @@
-	
+.container{
+    margin-top: 35px;
+}
 
 body { font-family: sans-serif }
 .ais-Hits-list { margin-top: 0; margin-bottom: 1em }
@@ -14,6 +16,45 @@ body { font-family: sans-serif }
 }
 
 
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+// .flip-container, .front, .back {
+// 	width: 320px;
+// 	height: 480px;
+// }
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+    margin-bottom: -80px;
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
 
 
 
