--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -44,6 +44,7 @@ square:last-of-type{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .wrong-guess {
