--- a/src/app/keyboard-button/keyboard-button.component.html
+++ b/src/app/keyboard-button/keyboard-button.component.html
@@ -1,4 +1,4 @@
-<div class="button-wrapper noselect">
+<div class="button-wrapper noselect" [ngClass]="state" >
     <div class="button-label">
         {{label}}
     </div>
