--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -1,8 +1,11 @@
 $square-border-color: #000;
 $letter-default-color: #000;
-$letter-correct-color: #173ba3;
+$letter-checked-color: #fff;
 $square-highlighted-color:#fada4a;
-
+$square-default-color: #fff;
+$present-bg-color: rgb(181, 159, 59);
+$correct-bg-color: rgb(83, 141, 78);
+$absent-bg-color: rgb(120, 124, 126);
 
 
 .square{
@@ -14,6 +17,26 @@ $square-highlighted-color:#fada4a;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: $square-default-color;
+
+    &.present{
+        background-color: $present-bg-color;
+        .letter, .clue-number {
+            color: $letter-checked-color;
+        }
+    }
+    &.correct{
+        background-color: $correct-bg-color;
+        .letter, .clue-number {
+            color: $letter-checked-color;
+        }
+    }
+    &.absent{
+        background-color: $absent-bg-color;
+        .letter, .clue-number {
+            color: $letter-checked-color;
+        }
+    }
 
     &.header{
         width: 29px !important;
@@ -33,8 +56,8 @@ $square-highlighted-color:#fada4a;
         font-size: 2.5rem;
         margin-top: 8px;
         color: $letter-default-color;
-        &.correct{
-            color: $letter-correct-color
+        &.checked{
+            color: $letter-checked-color;
         }
     }
 
@@ -182,32 +205,32 @@ $square-highlighted-color:#fada4a;
 
 
 
-.overlay{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background: 
-    linear-gradient(to top left,
-        rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0) calc(50% - 2px),
-        rgba(218,64,56,1) 50%,
-        rgba(0,0,0,0) calc(50% + 2px),
-        rgba(0,0,0,0) 100%);
-}
+// .overlay{
+//     height: 100%;
+//     width: 100%;
+//     position: absolute;
+//     background: 
+//     linear-gradient(to top left,
+//         rgba(0,0,0,0) 0%,
+//         rgba(0,0,0,0) calc(50% - 2px),
+//         rgba(218,64,56,1) 50%,
+//         rgba(0,0,0,0) calc(50% + 2px),
+//         rgba(0,0,0,0) 100%);
+// }
 
-.letter{
-    font-weight: 500;
-    font-size: 2.5rem;
-    margin-top: 8px;
-    color: $letter-default-color;
-    &.correct{
-        color: $letter-correct-color
-    }
-}
+// .letter{
+//     font-weight: 500;
+//     font-size: 2.5rem;
+//     margin-top: 8px;
+//     color: $letter-default-color;
+//     &.correct{
+//         color: $letter-correct-color
+//     }
+// }
 
-.clue-number{
-    font-size: 0.85rem;
-    position: absolute;
-    top: -1px;
-    left: 3px;
-}
+// .clue-number{
+//     font-size: 0.85rem;
+//     position: absolute;
+//     top: -1px;
+//     left: 3px;
+// }
