--- a/src/app/keyboard-button/keyboard-button.component.html
+++ b/src/app/keyboard-button/keyboard-button.component.html
@@ -1,5 +1,5 @@
-<div class="button-wrapper noselect" [ngClass]="state" >
+<button class="button-wrapper noselect" [ngClass]="state" >
     <div class="button-label">
         {{label}}
     </div>
-</div>
+</button>
