--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -16,4 +16,9 @@
     width: fit-content;
     padding: 10px;
     cursor: pointer;
+    border: none;
+
+    &:active{
+        filter: brightness(75%);
+    }
 }
