add answer validation

--- a/src/app/tutorial/tutorial.component.html
+++ b/src/app/tutorial/tutorial.component.html
@@ -2,7 +2,7 @@
     <i (click)="closeEvent()" class="close-icon fa-solid fa-xl fa-xmark"></i>
     <h5>How to play</h5>
     <p>
-      Advance through all seven levels of the crawsword before you run out of guesses.
+      Advance through all seven levels of the Crawsword before you run out of guesses.
     </p>
     <p>
       Each level contains a single crossword clue to solve. The clues become harder as you advance throught the levels.
