--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -4,7 +4,7 @@ $letter-checked-color: #fff;
 $square-highlighted-color:#fada4a;
 $square-default-color: #fff;
 $present-bg-color: rgb(201, 180, 88);
-$correct-bg-color: rgb(106, 170, 100);
+$correct-bg-color: #6aaa64;
 $absent-bg-color: rgb(120, 124, 126);
 
 
