--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<app-header (helpClickEvent)="toggleHelpModal()" (settingsClickEvent)="onSettingsClick()"></app-header>
+<app-header (helpClickEvent)="toggleHelpModal()" (menuClickEvent)="onMenuClick($event)"></app-header>
 
 <div [style.height.px]="gameWindowHeight" class="container flex fit-content-lg">
     <div class="levels-row">
@@ -33,8 +33,6 @@
     </div>
   </div>
 
-
-
   <div class="check-row">
 
     <div class="checks" [ngClass]="{'pulsate-fwd': shakeChecks}">
@@ -48,7 +46,7 @@
   </div>
 
 </div>
-<div class="keyboard-container">
+<div [ngClass]="{'no-click': guessNotAllowed || hasLost || hasWon}" class="keyboard-container">
   <keyboard (keypressEvent)="handleVirtualKeypress($event)"
             [correctLetters]="correctLetters"
             [absentLetters]="absentLetters"
@@ -65,5 +63,5 @@
   <app-modal [timeRemaining]="true" headerText="Game over" [decisionModal]="true" primaryLabel="New game" secondaryLabel="Share" (secondaryEvent)="share()" (primaryEvent)="reset()" ></app-modal>
 </div>
 <div *ngIf="showWinModal">
-  <app-modal [timeRemaining]="true" headerText="You win!" [bodyText]="'You had ' + (MAX_INCORRECT_GUESSES - incorrectGuesses) + ' guesses remaining.'" [decisionModal]="true" primaryLabel="New game" secondaryLabel="Share" (secondaryEvent)="share()" (primaryEvent)="reset()" ></app-modal>
+  <app-modal [timeRemaining]="true" headerText="You win!" [decisionModal]="true" primaryLabel="New game" secondaryLabel="Share" (secondaryEvent)="share()" (primaryEvent)="reset()" ></app-modal>
 </div>
